samples/_failures_safe/1761343019_19156a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_349cf193.c: In function ‘print_graph_info’:
./samples/SAFE/__tmp_349cf193.c:167:16: error: missing terminating " character
  167 |         printf("
      |                ^
./samples/SAFE/__tmp_349cf193.c:167:9: error: expected expression at end of input
  167 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_349cf193.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_349cf193.c:167:9: error: expected declaration or statement at end of input
